--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id ="app">
       <div v-for="item in recipes"> 
-       <h3>{{ item.name }}</h3>
+       <h3>Recipe: {{ item.name }}</h3>
        <p>{{ item.description }}</p>    
       </div>
     </div>
